--- a/app/views/platforms/index.html.erb
+++ b/app/views/platforms/index.html.erb
@@ -1,6 +1,6 @@
 <%= content_for :page_header do %>
   <div class="w-full flex flex-row items-center justify-between">
-    <div class="flex flex-row items-end">
+    <div class="flex flex-row items-start">
       <h1 class="text-2xl font-bold">Platform</h1>
       <span class="ml-2 text-gray-500 text-sm">(<%= @platforms.count %>)</span>
     </div>
@@ -20,7 +20,7 @@
         <div><img class="size-10 rounded-box" src="<%= asset_path("#{platform.name}.jpeg") %>"/></div>
         <div>
           <div><%= platform.name.titlecase %></div>
-          <div class="text-xs uppercase font-semibold opacity-60">Token: 1, Order: 2</div>
+          <div class="text-xs uppercase font-semibold opacity-60">Token: <%= platform.tokens.size %>, Order: <%= platform.orders.size %></div>
         </div>
         <button class="btn btn-square btn-ghost">
           <svg class="size-[1.2em]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g stroke-linejoin="round" stroke-linecap="round" stroke-width="2" fill="none" stroke="currentColor"><path d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"></path></g></svg>
