--- a/app/views/tokens/edit.html.erb
+++ b/app/views/tokens/edit.html.erb
@@ -10,9 +10,9 @@
   <div class="mt-4 grid grid-cols-2 w-[50%] gap-2 px-5">
     <label class="label">Symbol name</label>
     <%= f.text_field :symbol_name, placeholder: "BTCUSDT", class: "input" %>
-    <label class="label">Symbol name</label>
+    <label class="label">Volume by Percent</label>
     <%= f.text_field :volume_by_percent, placeholder: "10", class: "input" %>
-    <label class="label">Symbol name</label>
+    <label class="label">Volume by value</label>
     <%= f.text_field :volume_by_value, placeholder: "20", class: "input" %>
 
     <label class="label">Volume Type</label>
